#92 Fix a version color visibility in gantt

--- a/src/stylus/App.styl
+++ b/src/stylus/App.styl
@@ -3364,7 +3364,6 @@ a.close-icon:hover {
   }
 }
 
-
 .task_late {
   background-color color_red
   border 1px solid color_red
@@ -3415,52 +3414,52 @@ a.close-icon:hover {
 .version {
   &.task_late {
     background-color color_red
-    border 1px solid color_red
     height 2px
-    margin-top 3px
+    margin-top 5px
+    margin-left 1px
   }
 
   &.task_done {
     background-color color_green
-    border 1px solid color_green
     height 2px
-    margin-top 3px
+    margin-top 5px
+    margin-left 1px
   }
 
   &.task_todo {
-    background-color color_white
-    border 1px solid color_white
+    background-color color_gray_light_a
     height 2px
-    margin-top 3px
+    margin-top 5px
+    margin-left 1px
   }
 
-  &.marker {
-    icon( icon_circle, color_blue )
+  &.marker:before {
+    icon( icon_square, color_blue )
     border 0
-    margin-left -4px
     margin-top 1px
+    margin-left -4px
   }
 }
 
 .project {
   &.task_late {
     background-color color_red
-    border 1px solid color_red
     height 2px
-    margin-top 3px
+    margin-top 5px
+    margin-left 1px
   }
 
   &.task_done {
     background-color color_green
-    border 1px solid color_green
     height 2px
-    margin-top 3px
+    margin-top 5px
+    margin-left 1px
   }
 
   &.task_todo {
     background-color color_gray_light_a
-    height 1px
-    margin-top 6px
+    height 2px
+    margin-top 5px
     margin-left 1px
   }
 
